# fast_task

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
build_test/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  fast_task_export.h
build_test/tests/: CTestTestfile.cmake  cmake_install.cmake
build_test/tests/allocator/: CTestTestfile.cmake  cmake_install.cmake  test_allocator[1]_include.cmake
build_test/tests/execution/: CTestTestfile.cmake  cmake_install.cmake  test_task_basic[1]_include.cmake  test_task_exception[1]_include.cmake  test_task_priority[1]_include.cmake  test_task_timeout[1]_include.cmake
build_test/tests/futures/: CTestTestfile.cmake  cmake_install.cmake  test_cancelable_future[1]_include.cmake  test_future_basic[1]_include.cmake  test_future_callbacks[1]_include.cmake  test_future_tool[1]_include.cmake  test_future_void[1]_include.cmake
build_test/tests/interrupt/: CTestTestfile.cmake  cmake_install.cmake  test_interrupt_unsafe[1]_include.cmake  test_task_cancellation[1]_include.cmake
build_test/tests/mixed/: CTestTestfile.cmake  cmake_install.cmake  test_combined_scenarios[1]_include.cmake  test_cross_paradigm[1]_include.cmake  test_native_task_sync[1]_include.cmake
build_test/tests/scheduler/: CTestTestfile.cmake  cmake_install.cmake  test_bind_executor[1]_include.cmake  test_deadline_timer[1]_include.cmake  test_scheduler_lifecycle[1]_include.cmake  test_task_query[1]_include.cmake
build_test/tests/stackfull/: CTestTestfile.cmake  cmake_install.cmake  test_stackfull_basic[1]_include.cmake  test_stackfull_sleep[1]_include.cmake  test_stackfull_sync[1]_include.cmake
build_test/tests/stackless/: CTestTestfile.cmake  cmake_install.cmake  test_coroutine_await[1]_include.cmake  test_coroutine_awaiters[1]_include.cmake  test_coroutine_basic[1]_include.cmake  test_coroutine_utilities[1]_include.cmake
build_test/tests/switch/: CTestTestfile.cmake  cmake_install.cmake  test_context_switch[1]_include.cmake  test_exception_policy[1]_include.cmake
build_test/tests/synchronization/: CTestTestfile.cmake  cmake_install.cmake  test_multiply_mutex[1]_include.cmake  test_mutex_unify[1]_include.cmake  test_task_condition_variable[1]_include.cmake  test_task_limiter[1]_include.cmake  test_task_mutex[1]_include.cmake  test_task_recursive_mutex[1]_include.cmake  test_task_rw_mutex[1]_include.cmake  test_task_semaphore[1]_include.cmake
build_test/tests/threading/: CTestTestfile.cmake  cmake_install.cmake  test_condition_variable[1]_include.cmake  test_lock_guards[1]_include.cmake  test_mutex[1]_include.cmake  test_recursive_mutex[1]_include.cmake  test_rw_mutex[1]_include.cmake  test_spin_lock[1]_include.cmake  test_thread[1]_include.cmake  test_timed_mutex[1]_include.cmake
include/: allocator.hpp  coroutine.hpp  debug.hpp  exceptions.hpp  files.hpp  future.hpp  interput.hpp  interrupt.hpp  networking.hpp  shared.hpp  task.hpp  threading.hpp
include/coroutine/: condition_variable.hpp  core.hpp  deadline_timer.hpp  helpers.hpp  mutex.hpp  mutex_unify.hpp  promise.hpp  query.hpp  semaphore.hpp  this_task.hpp
include/coroutine/detail/: lock_misc.hpp
include/task/: condition_variable.hpp  deadline_timer.hpp  fwd.hpp  mutex.hpp  mutex_unify.hpp  promise.hpp  query.hpp  scheduler.hpp  semaphore.hpp  task.hpp  this_task.hpp
scripts/: debug_flaky_tests.ps1  debug_flaky_tests.sh
src/: allocator.cpp  asm.asm  coroutine.hpp  debug.cpp  files.cpp  future.cpp  future.hpp  networking.cpp  tasks.hpp  threading.cpp  threading.hpp
src/files/: files.cpp  files.hpp
src/networking/: networking.cpp  networking.hpp
src/tasks/: _internal.cpp  _internal.hpp  scheduler.cpp
src/tasks/classes/misc/: deadline_timer.cpp  multiply_mutex.cpp  mutex_unify.cpp  task_cancelation.cpp  task_result.cpp
src/tasks/classes/synchronization/: recursive_task_mutex.cpp  task_condition_variable.cpp  task_limiter.cpp  task_mutex.cpp  task_query.cpp  task_rw_mutex.cpp  task_rw_nutex.cpp  task_semaphore.cpp
src/tasks/classes/task/: coroutine.cpp  scheduler.cpp  task_def.cpp  this_task.cpp
src/tasks/util/: _dbg_macro.hpp  cpu.cpp  cpu.hpp  cpu_usage.cpp  cpu_usage.hpp  hill_climbing.cpp  hill_climbing.hpp  interrupt.cpp  interrupt.hpp  light_stack.cpp  light_stack.hpp  native_workers_singleton.hpp  riften_deque.hpp  work_stealing_deque.hpp
tests/: CMakeLists.txt  helpers.hpp  main.cpp
tests/allocator/: CMakeLists.txt  test_allocator.cpp
tests/execution/: CMakeLists.txt  test_task_basic.cpp  test_task_exception.cpp  test_task_priority.cpp  test_task_timeout.cpp
tests/futures/: CMakeLists.txt  test_cancelable_future.cpp  test_future_basic.cpp  test_future_callbacks.cpp  test_future_tool.cpp  test_future_void.cpp
tests/interrupt/: CMakeLists.txt  test_interrupt_unsafe.cpp  test_task_cancellation.cpp
tests/mixed/: CMakeLists.txt  test_combined_scenarios.cpp  test_cross_paradigm.cpp  test_native_task_sync.cpp
tests/scheduler/: CMakeLists.txt  test_bind_executor.cpp  test_deadline_timer.cpp  test_scheduler_lifecycle.cpp  test_task_query.cpp
tests/stackfull/: CMakeLists.txt  test_stackfull_basic.cpp  test_stackfull_sleep.cpp  test_stackfull_sync.cpp
tests/stackless/: CMakeLists.txt  test_coroutine_await.cpp  test_coroutine_awaiters.cpp  test_coroutine_basic.cpp  test_coroutine_utilities.cpp
tests/switch/: CMakeLists.txt  test_context_switch.cpp  test_exception_policy.cpp
tests/synchronization/: CMakeLists.txt  test_multiply_mutex.cpp  test_mutex_unify.cpp  test_task_condition_variable.cpp  test_task_limiter.cpp  test_task_mutex.cpp  test_task_recursive_mutex.cpp  test_task_rw_mutex.cpp  test_task_semaphore.cpp
tests/threading/: CMakeLists.txt  test_condition_variable.cpp  test_lock_guards.cpp  test_mutex.cpp  test_recursive_mutex.cpp  test_rw_mutex.cpp  test_spin_lock.cpp  test_thread.cpp  test_timed_mutex.cpp
